# fusesell

./: .gitignore  AGENTS.md  API_DOCUMENTATION.md  BIRTHDAY_EMAIL_GUIDE.md  BUSINESS_LOGIC.md  CHANGELOG.md  DATABASE.md  LICENSE  LOCAL_MANAGEMENT_GUIDE.md  MANIFEST.in  QUERYING_GUIDE.md  README.md  TECHNICAL.md  TEMPLATE_USAGE_GUIDE.md  TROUBLESHOOTING.md  fusesell.py  pyproject.toml  query_sales_processes.py  requirements.txt  test_render_results.py
fusesell_data/config/: prompts.json
fusesell_data/templates/: example_initial_outreach.txt
fusesell_local/: __init__.py  api.py  cli.py  pipeline.py
fusesell_local/config/: __init__.py  default_email_templates.json  default_prompts.json  default_scoring_criteria.json  prompts.py  settings.py
fusesell_local/stages/: __init__.py  base_stage.py  data_acquisition.py  data_preparation.py  follow_up.py  initial_outreach.py  lead_scoring.py
fusesell_local/tests/: conftest.py  test_api.py  test_cli.py  test_data_manager_products.py  test_data_manager_sales_process.py  test_data_manager_teams.py  test_event_scheduler.py
fusesell_local/utils/: __init__.py  agent_context.py  auto_setup.py  birthday_email_manager.py  data_manager.py  event_scheduler.py  llm_client.py  logger.py  output_helpers.py  timezone_detector.py  validators.py
realtimex/: agent-mcp-ui-buttons-extended.html  agent-mcp-ui-buttons.html  agent-mcp-ui-draft-buttons.html  agent-mcp-ui-prompts-form.html  workspace_dashboard_v2.html
